--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
         </div>
 
         <div class="card">
-            <img src="fvm.jpg" alt="FVM H5 Submarine">
-            <h3>FVM H5 Submarine</h3>
-            <p>Another weird knockoff of FVM.</p>
-            <button onclick="playGame('./FVM/fvmsh')">Play</button>
+            <img src="3p.jpg" alt="FVM H5 Submarine">
+            <h3>3 pandas 2 night</h3>
+            <p>A REALLY COOL Flash game.</p>
+            <button onclick="playSWF('./3p.swf')">Play</button>
         </div>
 		
 		<div class="card">
