--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             background: linear-gradient(to bottom, #34d058, #22863a);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
         }
+
+        /* Fullscreen Customization */
         #fullscreen {
             display: none;
             position: fixed;
@@ -85,31 +87,53 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: black;
+            background: rgba(0, 0, 0, 0.8);
             z-index: 9999;
+            overflow: hidden;
         }
-        #fullscreen iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-        #fullscreen .close-btn {
+        #game-frame {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            top: 50%;
+            left: 50%;
+            width: 80%;
+            height: 80%;
+            transform: translate(-50%, -50%);
+            border: none;
+            z-index: 1;
+        }
+        .png-barrier {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 85%;
+            height: 85%;
+            background: url('png-barrier.png') no-repeat center center;
+            background-size: contain;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+            z-index: 2;
+        }
+        .close-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            width: 40px;
+            height: 40px;
             background: red;
             color: white;
             border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            font-size: 1em;
+            border-radius: 50%;
+            font-size: 1.5em;
+            text-align: center;
+            line-height: 40px;
             cursor: pointer;
             z-index: 10000;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
-        #fullscreen .close-btn:hover {
+        .close-btn:hover {
             background: darkred;
         }
+
         .disclaimer {
             margin: 20px 0;
             font-size: 1.2em;
@@ -123,6 +147,7 @@
         <h1>Dragon Boi's Game Galley!</h1>
         <img src="dragonboi.gif" alt="Right Icon">
     </header>
+
     <div class="container">
         <div class="card">
             <img src="der.jpg" alt="Dave's Escape Room">
@@ -144,8 +169,8 @@
             <p>Bad piggies. But with SpongeBob. how original!</p>
             <button onclick="playSWF('./bob.swf')">Play</button>
         </div>
-
-        <div class="card">
+	
+	<div class="card">
             <img src="oe.jpg" alt="PvZOE">
             <h3>PvZOE</h3>
             <p>The one and only, PvZOE!</p>
@@ -208,22 +233,23 @@
         </div>
 		
 		<div class="card">
-            <img src="oe.jpg" alt="PvZOE: v48">
-            <h3>PvZOE: RECTIFY</h3>
-            <p>One of the many leaked builds of PvZOE. May not fully work.</p>
+            <img src="too.jpg" alt="PvZOE: v48">
+            <h3>Plant Eliminate Zombie</h3>
+            <p>One of the many leaked builds of PEZ. May not fully work.</p>
             <button onclick="playGame('./ruanzhu/pza/v2')">Play</button>
         </div>
 		
 		<div class="card">
             <img src="sw.jpg" alt="PvZOE: v48">
             <h3>Space War (NON-WORKING)</h3>
-            <p>An obscure pvz knockoff..</p>
+            <p>An obscure pvz knockoff.. <br> Here for archival just incase pvzbaike goes down.</p>
             <button onclick="playSWF('./ClientLoader.swf')">Play</button>
         </div>
     </div>
 
     <div id="fullscreen">
-        <button class="close-btn" onclick="closeGame()">Close</button>
+        <button class="close-btn" onclick="closeGame()">X</button>
+        <div class="png-barrier"></div>
         <iframe id="game-frame"></iframe>
     </div>
 
