--- a/index.html
+++ b/index.html
@@ -238,6 +238,13 @@
             <p>One of the many leaked builds of PEZ. May not fully work.</p>
             <button onclick="playGame('./ruanzhu/pza/v2')">Play</button>
         </div>
+	    
+	    <div class="card">
+            <img src="wmwjpeg." alt="PvZOE: v48">
+            <h3>Where's the water?</h3>
+            <p>One of the many atrocities on the internet. Not hosted on this site.</p>
+            <button onclick="playGame('https://kiz10.com/upload/games/htmlgames/where-is-the-water/1651262015/index.html')">Play</button>
+        </div>
 		
 		<div class="card">
             <img src="sw.jpg" alt="PvZOE: v48">
