--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
 	    
 	    <div class="card">
-            <img src="wmwjpeg." alt="PvZOE: v48">
+            <img src="wmw.jpg" alt="PvZOE: v48">
             <h3>Where's the water?</h3>
             <p>One of the many atrocities on the internet. Not hosted on this site.</p>
             <button onclick="playGame('https://kiz10.com/upload/games/htmlgames/where-is-the-water/1651262015/index.html')">Play</button>
