--- a/index.html
+++ b/index.html
@@ -252,6 +252,12 @@
             <p>An obscure pvz knockoff.. <br> Here for archival just incase pvzbaike goes down.</p>
             <button onclick="playSWF('./ClientLoader.swf')">Play</button>
         </div>
+	    <div class="card">
+            <img src="too.jpg" alt="PvZOE: v48">
+            <h3>Plant Eliminate Zombie HYBRID</h3>
+            <p>One of the many leaked builds of PEZ. May not fully work.</p>
+            <button onclick="playGame('https://carterthevyonder2.github.io/pvzoe/ruanzhu/pza/hybrid/index.html')">Play</button>
+        </div>
     </div>
 
     <div id="fullscreen">
