--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <img src="sprunki.jpeg" alt="PvZOE: v48">
             <h3>Sprunki</h3>
             <p>The infamous incredibox mod.</p>
-            <button onclick="playGame('./sprunki.html')">Play</button>
+            <button onclick="playGame('sprunki.html')">Play</button>
         </div>
 		<div class="card">
             <img src="abal.jpg" alt="PvZOE: v48">
