--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
 		
 		 <div class="card">
             <img src="sprunki.jpeg" alt="PvZOE: v48">
-            <h3>Sprunki</h3>
-            <p>The infamous incredibox mod.</p>
-            <button onclick="playGame('./sprunki/')">Play</button>
+            <h3>REDACTED</h3>
+            <p>The ILLEGAL (REDACTED).</p>
+            <button onclick="playGame('')">Play</button>
         </div>
 		<div class="card">
             <img src="abal.jpg" alt="PvZOE: v48">
