--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
 		
 		 <div class="card">
-            <img src="sprunki.jpeg" alt="PvZOE: v48">
+            <img src="sprunki.jpeg" alt="ILLEGAL (REDACTED)">
             <h3>REDACTED</h3>
             <p>The ILLEGAL (REDACTED).</p>
             <button onclick="playGame('')">Play</button>
